fix: Correct image resizing and overflow on different resolutions

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -16,10 +16,16 @@
   }
 
   &__image {
-    height: 100%;
-    width: auto;
+    max-width: 100%;
+    min-width: 25%;
 
     border-radius: 8px;
+
+    object-fit: cover;
+
+    &:not(:last-child) {
+      margin-right: 15px;
+    }
 
     @include _760 {
       &:not(:last-child) {
@@ -32,8 +38,9 @@
 .top {
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
 
-  height: 285px;
+  width: 100%;
 
   margin: 44px 0 44px;
   padding: 0 44px;
@@ -49,8 +56,7 @@
 .bottom {
   display: flex;
   justify-content: space-between;
-
-  height: 285px;
+  align-items: stretch;
 
   @include _760 {
     display: none;
